--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>RPG Ride</title>
+    <title>RPG Raid</title>
   </head>
   <body>
     <div id="root"></div>
