--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <script data-ad-client="ca-pub-2485166822479834" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>RPG-Raid</title>
   </head>
   <body>
